--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -502,7 +502,9 @@ Letting the relative pronoun surface in the internal case could be interpreted a
 Of course, this does not answer the question of what happens to the accusative case required by the external predicate. It also does not explain why not another emphasizing strategy is used, for instance forming a light-headed relative, which would leave space for two cases.
 I acknowledge this example as a counterexample to the pattern I describe, but I do not change my generalization, as this is a single occurrence.
 
-Leaving the counterexample aside, I conclude that Gothic and Old High German are both instances of languages that allow the internal and the external case to surface. The relative pronoun surfaces in the case that wins the case competition.
+Leaving the counterexample aside, I conclude that Gothic and Old High German are both instances of languages that allow the internal and the external case to surface. The relative pronoun surfaces in the case that wins the case competition.\footnote{
+Note that the two languages of the unrestricted type that I discuss are both extinct languages. In Section \ref{sec:pattern-iii} I argue that Ancient Greek (another extinct language) is also of this type. I am not aware of any non-extinct language that is of the unrestricted type. I have no explanation for this observation.
+}
 
 
 \section{Only internal case allowed}\label{sec:pattern-ii}
@@ -845,7 +847,7 @@ The light gray marking corresponds to \ref{ex:mg-acc-dat}, in which the internal
 The dark gray marking corresponds to \ref{ex:mg-dat-acc}, in which the external dative wins over the internal nominative, but the relative pronoun is not allowed to surface in the dative case (or in the losing accusative case as in \ref{ex:mg-dat-acc-u}).
 
 In sum, Modern German is an instance of a language that only allows the internal case to surface. The relative pronoun surfaces in the most complex case, but only when this more complex case is the internal case.\footnote{
-Another language that seems to be of the internal-only type is Finnish.
+Another language that seems to be of the internal-only type is Finnish. The data I discuss is taken from \citet{bresnan1978} after \citet{carlson1977}.
 The two cases that are compared are the partitive and the elative. I assume that the elative is a more complex case than the partitive. I believe so because the partitive can be syncretic with the accusative (and genitive), and the elative is a locative case \citep{karlsson2013}. Locatives are more complex than `structural' cases \citep[cf.]{caha2009}.
 
 Consider the example in \ref{ex:fin-ela-part}. In this example, the internal elative case competes against the external partitive case.
@@ -1081,15 +1083,15 @@ This section discusses the situation in which the case is neither the internal c
     \label{tbl:case-competition-none-repeated}
 \end{table}
 
-An example of a language that shows this pattern is Polish. In this section I discuss the Polish data, based on the research of \citet{citko2013} after \citet{himmelreich2017}. I only go through the case competition between accusative and dative, as only this data is discussed. This does not change anything about the point I am making here: the only kind of system that is compatible with the examples given is the one in which the case is allowed to surface in neither the internal case nor in the external case, when either of them wins the case competition. I made the glosses more detailed, and I added translations where they were absent.
+An example of a language that shows this pattern is Polish. In this section I discuss the Polish data, based on the research of \citet{citko2013} after \citet{himmelreich2017}. I made the glosses more detailed, and I added translations where they were absent. I only go through the case competition between accusative and dative, as only this data is discussed. This does not change anything about the point I am making here: the only kind of system that is compatible with the examples given is the one in which neither the internal case nor in the external case is allowed to surface, when either of them wins the case competition.
 
-First I discuss examples in which the internal and the external case match, and then examples in which they differ. If the internal case and the external case are identical, so there is a tie, the relative pronoun simply surfaces in that case. I illustrate this for the nominative, the accusative and the dative.
+First I discuss examples in which the internal and the external case match, and then examples in which they differ. If the internal case and the external case are identical, so there is a tie, the relative pronoun simply surfaces in that case. I illustrate this for the accusative and the dative.
 
 Consider the example in \ref{ex:polish-acc-acc}, in which the internal accusative case competes against the external accusative case.
 The internal case and external case are accusative, as the predicate \tit{lubić} `like' in both clauses takes accusative objects.
 The relative pronoun \tit{kogo} `\ac{rp}.\ac{an}.\ac{acc}' appears in the internal and external case: the accusative.
 
-\exg. Jan lubi kogo -\tbf{kolkwiek} \tbf{Maria} \tbf{lubi}.\\
+\exg. Jan lubi kogo -kolkwiek Maria lubi.\\
  Jan like.\tsc{3sg}\scsub{[acc]} \ac{rp}.\ac{an}.\ac{acc} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
  `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-acc}
 
@@ -1098,11 +1100,11 @@ The internal case is dative, as the predicate \tit{ufać} `trust' takes dative o
 The external case is dative as well, as the predicate \tit{pomagać} `help' also takes dative objects.
 The relative pronoun \tit{komu} `\ac{rp}.\ac{an}.\ac{dat}' appears in the internal and external case: the dative.
 
-\exg. Jan pomaga komu -\tbf{kolkwiek} \tbf{ufa}.\\
+\exg. Jan pomaga komu -kolkwiek ufa.\\
  Jan help.\tsc{3sg}\scsub{[dat]} \ac{rp}.\ac{an}.\ac{dat} ever trust.\tsc{3sg}\scsub{[dat]}\\
  `Jan helps whomever he trusts.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-dat}
 
-These findings can be summarized as in Table \ref{tbl:summary-polish-matching}. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The accusative marked in light gray corresponds to \ref{ex:polish-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The dative marked in dark gray corresponds to \ref{ex:polish-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
+These findings can be summarized as in Table \ref{tbl:summary-polish-matching}.
 
 \begin{table}[ht]
  \center
@@ -1126,6 +1128,8 @@ These findings can be summarized as in Table \ref{tbl:summary-polish-matching}. 
    \label{tbl:summary-polish-matching}
 \end{table}
 
+The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The accusative marked in light gray corresponds to \ref{ex:polish-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The dative marked in dark gray corresponds to \ref{ex:polish-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
+
 In Table \ref{tbl:summary-polish-matching}, two cells remain empty. These are the cases in which the internal and the external case differ. In the remainder of this section, I discuss them one by one.
 
 I give examples from the case competition between accusative and dative. According to the case scale, the dative would win over the accusative. However, as the case is neither allowed to surface in the internal case nor in the external case, all examples are ungrammatical.
@@ -1141,7 +1145,9 @@ The example adheres to the case scale, but the internal case is not allowed to s
 Jan like.\tsc{3sg}\scsub{[acc]} \ac{rp}.\ac{an}.\ac{dat} ever tease.\tsc{3sg}\scsub{[dat]}\\
 `Jan likes whoever he teases.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-dat}
 
-The example in \ref{ex:polish-acc-dat-u} is identical to \ref{ex:polish-acc-dat}, except for that the relative pronoun appears in the external less complex accusative case. This example is also ungrammatical: the external case is less complex, and the external case is not allowed to surface when it wins the case competition.
+The example in \ref{ex:polish-acc-dat-u} is identical to \ref{ex:polish-acc-dat}, except for that the relative pronoun appears in the external less complex accusative case.
+The relative pronoun is not marked in bold, just as the main clause, showing that the relative pronoun patterns with the main clause.
+This example is also ungrammatical: the external case is less complex, and the external case is not allowed to surface when it wins the case competition.
 
 \exg. *Jan lubi kogo \tbf{-kolkwiek} \tbf{dokucza}.\\
 Jan like.\tsc{3sg}\scsub{[acc]} \ac{rp}.\ac{an}.\ac{acc} ever tease.\tsc{3sg}\scsub{[dat]}\\
@@ -1158,7 +1164,9 @@ The example adheres to the case scale, but the external case is (as the internal
 Jan trust.\tsc{3sg}\scsub{[dat]} \ac{rp}.\ac{an}.\ac{dat} ever let.\tsc{3sg}\scsub{[acc]} to home\\
 `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc}
 
-The example in \ref{ex:polish-dat-acc-u} is identical to \ref{ex:polish-dat-acc}, except for that the relative pronoun appears in the internal less complex accusative case. This example is also ungrammatical: the internal case is less complex, and the internal case is not allowed to surface when it wins the case competition.
+The example in \ref{ex:polish-dat-acc-u} is identical to \ref{ex:polish-dat-acc}, except for that the relative pronoun appears in the internal less complex accusative case.
+The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+This example is also ungrammatical: the internal case is less complex, and the internal case is not allowed to surface when it wins the case competition.
 
 \exg. *Jan ufa \tbf{kogo} \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
 Jan trust.\tsc{3sg}\scsub{[dat]} \ac{rp}.\ac{an}.\ac{acc} ever let.\tsc{3sg}\scsub{[acc]} to home\\
@@ -1198,7 +1206,7 @@ In case competition in headless relatives two aspects play a role. The first one
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-two-patterns-sum}
 
-This generates the pattern shown in Table \ref{tbl:case-competition-table}. The left column shows the internal case between square brackets. The top row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. When the dative wins over the accusative, the relative pronoun appears in the dative case. When the dative wins over the nominative, the relative pronoun appears in the nominative case. When the accusative wins over the nominative, the relative pronoun appears in the accusative case.
+This generates the pattern shown in Table \ref{tbl:case-competition-table}.
 
 \begin{table}[ht]
   \center
@@ -1230,6 +1238,8 @@ This generates the pattern shown in Table \ref{tbl:case-competition-table}. The 
     \label{tbl:case-competition-table}
 \end{table}
 
+The left column shows the internal case between square brackets. The top row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. When the dative wins over the accusative, the relative pronoun appears in the dative case. When the dative wins over the nominative, the relative pronoun appears in the dative case. When the accusative wins over the nominative, the relative pronoun appears in the accusative case.
+
 The second aspect is whether the internal and the external case are allowed to surface when either of them wins the case competition. This differs across languages. There are four logical possibilities, listed in \ref{ex:logical-possibilities}.
 
 \ex. Logically possibile language types\label{ex:logical-possibilities}
@@ -1240,12 +1250,7 @@ The second aspect is whether the internal and the external case are allowed to s
 \b. The matching type: neither the internal case nor in the external case is allowed to surface when either of them wins the case competition\label{ex:matching}
 \global\let\alph=\oldalph
 
-As far as I am aware, not all of these logical possibilities are attested in natural languages. I discuss the types one by one, and I give example when they are attested. In my description, I refer to the differ gray-marking in Table \ref{tbl:case-competition-table-marking}. The cells marked in light gray are the ones in which the internal case wins the case competition, the cells marked in dark gray are the ones in which the external case wins the case competition, and the unmarked cells are the ones in which the internal and external case match.
-
-Gothic, Old High German and Classical Greek are examples of the unrestricted type in \ref{ex:int-ext}. In these languages, relative pronouns in the unmarked, light gray and dark gray cells are attested.
-Modern German is an example of the internal-only type in \ref{ex:int-only}. In this language, relative pronouns in the unmarked and light gray cells are grammatical.
-To my knowledge, the external-only type in \ref{ex:ext-only} is not attested. This would be a language in which relative pronouns in the unmarked and the dark gray cells are grammatical.
-Polish is an example of a language of the matching type in \ref{ex:matching}. In this language, relative pronoun in only in the unmarked cells are grammatical.
+As far as I am aware, not all of these logical possibilities are attested in natural languages. I discuss the types one by one, and I give example when they are attested. In my description, I refer to the different gray-marking in Table \ref{tbl:case-competition-table-marking}.
 
 \begin{table}[ht]
   \center
@@ -1277,38 +1282,34 @@ Polish is an example of a language of the matching type in \ref{ex:matching}. In
     \label{tbl:case-competition-table-marking}
 \end{table}
 
-Figure \ref{fig:attested-headless-relatives-case-competition} shows a diagram that generates the three attested patterns and not the unattested one. The diamonds stand for parameters that distinguish different types of languages. The texts along the arrows to the rectangles (and to a diamond) indicate how the different types of languages behave with respect to the parameters. The rectangles describe the form that the relative pronoun appears in. Below the rectangle I give examples of languages that are of this particular type.
+The cells marked in light gray are the ones in which the internal case wins the case competition, the cells marked in dark gray are the ones in which the external case wins the case competition, and the unmarked cells are the ones in which the internal and external case match.
 
-The first parameter is whether or not a language allows for a mismatch between the internal and external case.
-If a language does not allow for a mismatch, the matching type of language \ref{ex:matching} is generated.
-If a language allows for a mismatch between the internal and external case, the second parameter comes into play. This one is concerned with the case the relative pronoun is allowed to surface when it wins the case competition. Here I give two options: (1) it is allowed to surface in only the internal case or (2) it is allowed to surface in the internal and the external case.\footnote{
-I do not introduce the option of allowing the relative pronoun to surface only in the external case. The reason for this is that this pattern is not attested crosslinguistically. If a language like this appears, this option could in principle be added. However, I predict that it will not appear. In Chapter \ref{part:deriving}, I show how it follows from general properties of relative clauses that this type of language is excluded.
-}
-If a language allows the internal case to surface when it wins the case competition, the internal-only type is generated.
-If a language allows the internal and the external case to surface, the unrestricted type is generated.\footnote{
-The matching type could also have been generated with the second parameter. The text along the arrow would have been \tit{none}. I choose to not do this, because in Chapter \ref{part:deriving} I propose separate mechanisms for each of the parameters in Figure \ref{fig:attested-headless-relatives-case-competition}. The first one distinguishes matching languages from unrestricted (i.e. unrestricted and internal-only) languages, and the second one distinguishes unrestricted from internal-only languages.
-}
+Gothic, Old High German and Classical Greek are examples of the unrestricted type in \ref{ex:int-ext}. In these languages, relative pronouns in the unmarked, light gray and dark gray cells are attested.
+Modern German is an example of the internal-only type in \ref{ex:int-only}. In this language, relative pronouns in the unmarked and light gray cells are grammatical.
+To my knowledge, the external-only type in \ref{ex:ext-only} is not attested. This would be a language in which relative pronouns in the unmarked and the dark gray cells are grammatical.
+Polish is an example of a language of the matching type in \ref{ex:matching}. In this language, relative pronoun in only in the unmarked cells are grammatical.
 
-\begin{figure}[ht]
+Figure \ref{fig:attested-headless-relatives-case-competition} shows a diagram that models the three attested patterns and not the unattested one. The diamonds stand for parameters that distinguish different types of languages. The texts along the arrows to the rectangles (and to a diamond) indicate how the different types of languages behave with respect to the parameters. The rectangles describe the form that the relative pronoun appears in. Below the rectangle I give examples of languages that are of this particular type.
+
+\begin{figure}[htbp]
   \centering
-  % \begin{adjustbox}{max width=0.9\textwidth}
   \begin{tabular}[b]{c}
     \toprule
     \begin{tikzpicture}[node distance=1.5cm]
       \node (question2) [question]
-      {allow \tsc{int}?}; %ϕ+\tsc{k} portmanteau?
+      {allow \tsc{int}}; %ϕ+\tsc{k} portmanteau?
           \node (outcome2) [outcome, below of=question2, xshift=-2cm, yshift=-0.5cm]
           {matching};
               \node (example2) [example, below of=outcome2]
               {e.g. Polish\\\phantom{x}\\\phantom{x}};
           \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-1cm]
-          {allow \tsc{ext}?}; %\tsc{lh}-\ac{rp} syncretism?
+          {allow \tsc{ext}}; %\tsc{lh}-\tsc{rp} syncretism?
               \node (outcome3) [outcome, below of=question3, xshift=-2cm, yshift=-0.5cm]
               {internal-only};
                   \node (example3) [example, below of=outcome3]
                   {e.g. Modern German\\\phantom{x}};
               \node (outcome4) [outcome, below of=question3, xshift=2cm, yshift=-0.5cm]
-              {un-restricted};
+              {unrestricted};
                   \node (example4) [example, below of=outcome4]
                   {e.g. Gothic, Old High German, Classical Greek};
 
@@ -1317,16 +1318,17 @@ The matching type could also have been generated with the second parameter. The 
     \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
     \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
     \end{tikzpicture}\\
-  \bottomrule
-\end{tabular}
-% \end{adjustbox}
+    \bottomrule
+  \end{tabular}
     \caption{Attested patterns in headless relatives with case competition}
     \label{fig:attested-headless-relatives-case-competition}
 \end{figure}
 
-The main focus of Chapter \ref{part:deriving} is the linguistic counterpart of the second parameter. I show with general properties of relative clauses how the difference between the unrestricted and the internal-only type can be modeled, and how the exclusion of the external-only type follows from these particular properties. I also introduce a linguistic counterpart for the first parameter, which distinguishes matching from unrestricted languages.
+The first parameter, \tit{allow \tsc{int}}, is whether the internal case is allowed to surface when it wins the case competition. This parameter distinguishes the matching type of language from the internal-only and the unrestricted type of languages.
+If the internal case is not allowed to surface, the matching type of language in \ref{ex:matching} in generated.
+If the internal case is allowed to surface when it wins the case competition, the second parameter comes into play.
+The second parameter, \tit{allow \tsc{ext}}, is whether the external case is allowed to surface when it wins the case competition. This parameter distinguishes the internal-only type of language from the unrestricted type of language.
+If the external case is not allowed to surface, the internal-only type of language in \ref{ex:int-only} is generated.
+If the external case is allowed to surface, the unrestricted type of language in \ref{ex:int-ext} is generated.
 
-
-
-
-only dead languages are unrestricted and no dead language is not unrestricted
+This schema does not have a place for an external-only type of language. The reason for this is that this pattern is not attested crosslinguistically. If a language like this appears, this option could in principle be added. However, I predict that it will not appear. In Part \ref{part:deriving}, I show how it follows from general properties of relative clauses that this type of language is excluded. In that part of the dissertation I also introduce linguistic counterparts to the parameters I here introduced as \tit{allow \tsc{int}} and \tit{allow \tsc{ext}}.
