--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -912,3 +912,10 @@
   year={2013},
   publisher={Routledge}
 }
+
+@article{starke2017,
+  title={Resolving (DAT= ACC)$\ne$ GEN},
+  author={Starke, Michal},
+  year={2017},
+  publisher={Ubiquity Press}
+}
