--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -267,10 +267,7 @@ The two examples in which the accusative and the dative compete are shown in Tab
     \label{tbl:summary-gothic-acc-dat}
  \end{table}
 
-Table \ref{tbl:summary-gothic-simple} is a simplified version of Table \ref{tbl:summary-gothic-acc-dat}. The data in the table can be divided into three sets: (1) a set of three unmarked cells in the top-left to bottom-right diagonal, (2) a set of three light gray marked cells in the bottom-left corner and (3) a set of three dark gray marked cells in the top-right corner.
-The unmarked three cells in the diagonal are situations in which the internal and the external case match. They correspond to the examples \ref{ex:gothic-nom-nom}, \ref{ex:gothic-acc-acc-rep} and \ref{ex:gothic-dat-dat}.
-The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. In these situations, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-nom-acc-rep}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
-The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. In these situations, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-acc-nom-rep}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
+Table \ref{tbl:summary-gothic-simple} is a simplified version of Table \ref{tbl:summary-gothic-acc-dat}.
 
 \begin{table}[ht]
   \center
@@ -278,6 +275,11 @@ The three cells in the top-right corner, marked in dark gray, are the situations
     \input{tables/gothic-summary.tex}
     \label{tbl:summary-gothic-simple}
 \end{table}
+
+The data in the table can be divided into three sets: (1) a set of three unmarked cells in the top-left to bottom-right diagonal, (2) a set of three light gray marked cells in the bottom-left corner and (3) a set of three dark gray marked cells in the top-right corner.
+The unmarked three cells in the diagonal are situations in which the internal and the external case match. They correspond to the examples \ref{ex:gothic-nom-nom}, \ref{ex:gothic-acc-acc-rep} and \ref{ex:gothic-dat-dat}.
+The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. In these situations, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-nom-acc-rep}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
+The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. In these situations, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-acc-nom-rep}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
 
 To sum up, case competition in headless relative is subject to the case scale, repeated in \ref{ex:case-scale-rep}.
 
