--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -23,10 +23,10 @@
 %%%SPACING/BREAKING%%%
 
 %reverse margins left-right
-\let\tmp\oddsidemargin
-\let\oddsidemargin\evensidemargin
-\let\evensidemargin\tmp
-\reversemarginpar
+% \let\tmp\oddsidemargin
+% \let\oddsidemargin\evensidemargin
+% \let\evensidemargin\tmp
+% \reversemarginpar
 %
 
 %%%TREES%%%
