--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
-\documentclass[hidelinks,a4paper]{memoir}
+\documentclass[hidelinks,a4paper,oneside]{memoir}
 
-\includeonly{case-competition-typology}
+\includeonly{languages-without-case-competition}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
@@ -52,9 +52,7 @@ Boarnsterhim, Niederlande\\
 
 \clearpage
 
-\chapter*[Acknowledgements]{Acknowledgements}
-
-thanks
+% \include{acknowledgements}
 
 \clearpage
 \tableofcontents
